bran-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bran
  namespace: fampay
spec:
  selector:
    app: bran
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
