hodor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hodor
  namespace: fampay
spec:
  selector:
    app: hodor
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
  type: ClusterIP
