services-for-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: bran
  namespace: fampay
spec:
  type: ClusterIP
  selector:
    app: bran
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hodor
  namespace: fampay
spec:
  type: ClusterIP
  selector:
    app: hodor
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
