services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bran
  namespace: fampay
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-name: "fampay-nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  selector:
    app: bran
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  loadBalancerSourceRanges:
  - 0.0.0.0/0
---
apiVersion: v1
kind: Service
metadata:
  name: hodor
  namespace: fampay
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-name: "fampay-nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  selector:
    app: hodor
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
  loadBalancerSourceRanges:
  - 0.0.0.0/0
