network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bran-network-policy
  namespace: fampay
spec:
  podSelector:
    matchLabels:
      app: bran
  ingress:
  - ports:
    - port: 5000
      protocol: TCP
  egress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hodor-network-policy
  namespace: fampay
spec:
  podSelector:
    matchLabels:
      app: hodor
  ingress:
  - ports:
    - port: 8888
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: bran
  egress:
  - {}
